--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-/* Here we have the style for every template */
-
 .header-container{
     max-width: 500px;
 }
@@ -9,10 +7,11 @@
 }
 
 .footer-container{
-    background-color: #ffbf6a;
-    height: 200px;
-    width: 50%;
-    /*max-height: 180px;*/
+    max-height: 180px;
+    width: 100%;
+    position: fixed;
+    left: 0;
+    bottom: 0;
 }
 
 .level{
