--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 }
 
 .footer-container{
+    background-image: linear-gradient(141deg,#ffaf24 0,#ffdd57 71%,#fffa70 100%);
     max-height: 180px;
     width: 100%;
     position: fixed;
@@ -16,4 +17,8 @@
 
 .level{
     max-height:100px;
+}
+
+.select, .select select {
+    width: 100%;
 }
