--- a/style.css
+++ b/style.css
@@ -10,9 +10,8 @@
     background-image: linear-gradient(141deg,#ffaf24 0,#ffdd57 71%,#fffa70 100%);
     max-height: 180px;
     width: 100%;
-    position: fixed;
     left: 0;
-    bottom: 0;
+    bottom: 10px;
 }
 
 .level{
@@ -21,4 +20,8 @@
 
 .select, .select select {
     width: 100%;
+}
+
+.container-list{
+    max-width: 600px;
 }
