--- a/style.css
+++ b/style.css
@@ -24,8 +24,27 @@
 
 .container-list{
     max-width: 600px;
+    margin: auto;
+    width: 50%;
+    border: 3px solid deeppink;
+    padding: 10px;
 }
 
 #letter{
     color: deeppink;
 }
+
+.center{
+    margin: auto;
+    width: 50%;
+    padding-left: 15px;
+}
+
+.container-categories-list{
+    max-width: 900px;
+    margin: auto;
+    width: 75%;
+    padding: 10px;
+}
+
+
